# xoz

./: COPYRIGHT  Cargo.toml  README.md
benches/: descendants.rs  parser.rs
examples/: parser.rs  parser2.rs
src/: access.rs  builder.rs  comp.rs  data.rs  document.rs  error.rs  iter.rs  lib.rs  mta.rs  mta_compiler.rs  name.rs  node.rs  node_info_vec.rs  parser.rs  serializer.rs  structure.rs  tag.rs  tags_builder.rs  tagvec.rs  text.rs  text2.rs  text_fm.rs  textsearch.rs  traverse.rs  tree_builder.rs  xozdata.rs
src/document/: attr.rs  comp.rs  core.rs  info.rs  iter.rs  mod.rs  nav.rs  ns.rs  str.rs
src/xozdata/: attr.rs  comp.rs  core.rs  info.rs  iter.rs  mod.rs  nav.rs  ns.rs  str.rs
tests/: test_attr.rs  test_basic.rs  test_comp.rs  test_info.rs  test_iter.rs  test_nav.rs  test_ns.rs  test_parse.rs  test_str.rs
