[package]
name = "xoz"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
sucds = "0.8.1"
vers-vecs = { path = "../vers" }
# fm-index = { path = "../fm-index" }
xot = "0.28.0"
quick-xml = { version = "0.37.2", features = ["encoding"] }
thiserror = "2.0.11"

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "descendants"
harness = false

[[bench]]
name = "parser"
harness = false
